<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_item_menu"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always"
        android:title="@string/menu_info_edit_title" />
</menu>